# rppico_projects

./: .gitmodules  disp_rppico_serial.py
UniTaruBoard/: CMakeLists.txt  UniTaruBoard.cpp
button_and_volume/: CMakeLists.txt  button_and_volume.c  usb_descriptors.c  usb_descriptors.h
hello/Hello/: CMakeLists.txt  Hello.cpp
